Update: Change references from SVG to JPG for hero image
⚠️ WARNING: piano-keys-placeholder.jpg needs to be added to images/ folder

Changes:
- Updated index.html hero background to use .jpg
- Updated css/styles.css hero background to use .jpg
- Added PUSH-GITHUB.md documentation

Note: The actual JPG file still needs to be placed in images/ folder

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     
     <!-- Hero Section -->
-    <header id="hero" class="hero" style="background-image: url('images/piano-keys-placeholder.svg');">
+    <header id="hero" class="hero" style="background-image: url('images/piano-keys-placeholder.jpg');">
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <div class="logo">
