--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;1,300&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     
     <!-- Styles -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css?v=20260109">
 </head>
 <body>
     
@@ -455,7 +455,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="js/main.js" defer></script>
+    <script src="js/main.js?v=20260109" defer></script>
 </body>
 </html>
 
