Update: remplace 'Brest' par 'Tours' dans la phrase de formation

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <p class="highlight-note">📅 Créneaux privilégiés : milieu de matinée ou d'après-midi, pour s'intégrer harmonieusement dans votre journée de travail.</p>
                     </div>
                     
-                    <p class="formation">✨ <em>Formation intensive en musique actuelle à l'école Tous en Scène (Brest)</em></p>
+                    <p class="formation">✨ <em>Formation intensive en musique actuelle à l'école Tous en Scène (Tours)</em></p>
                 </div>
                 
                 <div class="about-image" data-aos="fade-left">
