Mise à jour mentions légales: ajout introduction LCEN et changement hébergeur vers Vercel

--- a/index.html
+++ b/index.html
@@ -461,6 +461,10 @@
             <span class="modal-close" data-modal="modalMentions">&times;</span>
             <h2>Mentions Légales</h2>
             
+            <p>
+                Conformément aux dispositions de la loi n° 2004-575 du 21 juin 2004 pour la confiance en l'économie numérique, il est précisé aux utilisateurs du site Enharmonie l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi.
+            </p>
+
             <h3>1. Éditeur du site</h3>
             <p>
                 <strong>Romain Le Breton</strong><br>
@@ -483,11 +487,7 @@
 
             <h3>3. Hébergement</h3>
             <p>
-                Ce site est hébergé par :<br>
-                <strong>Squarespace, Inc.</strong><br>
-                225 Varick Street, 12th Floor<br>
-                New York, NY 10014, États-Unis<br>
-                Site web : <a href="https://www.squarespace.com" target="_blank" rel="noopener">www.squarespace.com</a>
+                Le Site est hébergé par la société <strong>Vercel Inc.</strong>, situé 440 N Barranca Ave #4133 Covina, CA 91723 États-Unis, (contact téléphonique ou email : +15592887060).
             </p>
 
             <h3>4. Propriété intellectuelle</h3>
